--- a/androiddev/app/src/main/res/values/strings.xml
+++ b/androiddev/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TODO</string>
     <string name="action_settings">Settings</string>
+    <string name="add_task_hint">Add Task</string>
 </resources>
