--- a/androiddev/app/src/main/res/values/strings.xml
+++ b/androiddev/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TODO</string>
     <string name="action_settings">Settings</string>
     <string name="add_task_hint">Add Task</string>
+    <string name="signout_string">Are you sure you want to sign out?</string>
+    <string name="sign_out">Signout</string>
 </resources>
